objects/CC_Question_Answer_Translations__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <description>NGCC Phase1:Direct reference of Answer Text in case Answer Translation</description>
        <formula>CC_Master_Question_Answer_Bank__r.Answer_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Direct reference of Answer Text in case Answer Translation</inlineHelpText>
        <label>Answer Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Master_Question_Answer_Bank__c</fullName>
        <description>NGCC Phase1:Reference to the master record for the translation is stored</description>
        <inlineHelpText>Reference to the master record for the translation is stored</inlineHelpText>
        <label>CC Master Question Answer Bank</label>
        <referenceTo>CC_Master_Question_Answer_Bank__c</referenceTo>
        <relationshipLabel>CC Question/Answer Translations</relationshipLabel>
        <relationshipName>CC_Question_Answer_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <description>NGCC Phase1:System Generated Language Code based on Translated Language</description>
        <externalId>true</externalId>
        <inlineHelpText>System Generated Language Code based on Translated Language</inlineHelpText>
        <label>Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>NGCC Phase1:Define language for the question or answer</description>
        <inlineHelpText>Define language for the question or answer</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Chinese Simplified</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterQuestionBankId__c</fullName>
        <description>NGCC Phase1:System Generated Unique Code</description>
        <externalId>true</externalId>
        <inlineHelpText>System Generated Unique Code</inlineHelpText>
        <label>MasterQuestionBankId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translated_Value__c</fullName>
        <description>NGCC Phase1:Translated value for Questions or Answers</description>
        <inlineHelpText>Translated value for Questions or Answers</inlineHelpText>
        <label>Translated Value</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <description>NGCC Phase-1: Each question and answer may have translation in specific languages and these translations are used to provide agent to launch call script in specific language</description>
    <label>CC Question/Answer Translations</label>
    <nameField>
        <displayFormat>QA_T-{000000}</displayFormat>
        <label>CC Question/Answer Translations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Question/Answer Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>